# Taskware

./: .gitignore  README.md  pyproject.toml
scripts/: install_desktop.sh
src/taskware/: app.py
src/taskware/backend/: cron.py  salt_exporter.py  systemd.py
src/taskware/utils/: nl2cron.py
src/taskware/windows/: add_job_dialog.py  add_timer_dialog.py  main_window.py  salt_settings_dialog.py
