[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "taskware"
version = "0.1.0"
description = "Modern Linux Task Scheduler GUI (GTK4 + libadwaita)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Taskware Contributors" }
]
# On Ubuntu 22.04, prefer system packages for GTK4/libadwaita and PyGObject
# so we intentionally do NOT depend on PyGObject via pip.
dependencies = []
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Environment :: X11 Applications :: GTK",
]

[project.urls]
Homepage = "https://github.com/your-org/taskware"

[project.scripts]
# After `pip install -e .`, you can run `taskware`
taskware = "taskware.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taskware"]

[tool.hatch.build.targets.sdist]
include = [
  "src/taskware/**",
  "README.md",
  "pyproject.toml",
]
